--- a/week3-submission/history.txt
+++ b/week3-submission/history.txt
@@ -1,19 +1,15 @@
 Horror activated:You are in a dark forest. There is a path to the north and a cave to the east.
-go to the cave in the east
-The player sees a glowing sphere on the ground, then the player is attacked by some zombies. The player escapes and heads towards the western tunnel. One of them is very hungry. The player can decide to help it or destroy it. The player then
-throw a grenade at the zomb
-The player enters the tunnels behind the monster. After a while, one of them comes out of the tunnel.
-There are two zombies in the tunnel, two zombiks guarding the entrance, and a zombie with the skeleton hat.
-If
-bare knuckle fight it
-The zombies attack the player during the first two levels. If the player is fast enough, the zombies will fall down and be killed.
-Kill
-The player reaches the other tunnel and a boss zombie.
-the player is attacked by a zomb
-i slay the boss
-The player travels through a deep void to a place where there are some creatures. The player can attack them if they are fast or jump. However, if the player is slow, he can jump off the ledge and attack the monster.
-The player
-did i kill the boss
-The player is in the cave near the waterfall. There is a monster there and three zombies.
-go to the cave in the north
-The player enters the tunnel, and encounters two hunters. One is a zombie and the other is a skeleton.
+go north
+The player has just completed a mission for the High Command. Your role in the mission is to kill all the orcs. The quest is pretty straightforward.
+Player: kill all orcs
+Player: kill all orcs
+Player: kill all orcs
+This
+run to high command
+kill orcs
+Player: kill orcs! Orc kill you!
+Player: run to high command
+This is a common mistake many players make when preparing for the big fight of the night. The problem with this is you run in the wrong direction,
+i run in the right direction
+Orc raid
+This one is really simple. The orcs have been raiding the kingdom (the dwarves and elves need to be killed). The player must survive the first round of orcs. And then there are the orc generals and captains to kill in the later
